src/test/deca/syntax/invalid/include_lex_1.deca
// Description:
//    tests de programme incorrect lexicalement (FILENAME vide)
//
// Resultats:
//    Ligne 9: Erreur, filename vide
//
// Historique:
//    cree le 03/01/2023
include ""